bugg fixing jwt etc

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 # Database
-MONGODB_URI=mongodb://localhost:27017/telemedicine
+MONGODB_URI=mongodb+srv://wesleywenceslaus07_db_user:GZLpqSnl6AT2SHqA@cluster0.mq7as0k.mongodb.net/healthcare-mearn?appName=Cluster0
 
 # JWT
-JWT_SECRET=your-super-secret-jwt-key
-JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key
+JWT_SECRET=super-secret-jwt-key-for-telemedicine-app-2025
+JWT_REFRESH_SECRET=super-secret-refresh-jwt-key-for-telemedicine-app-2025
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
 
@@ -22,5 +22,5 @@ TWILIO_PHONE_NUMBER=your-twilio-phone-number
 OPENAI_API_KEY=your-openai-api-key
 
 # App
-PORT=3001
+PORT=3002
 FRONTEND_URL=http://localhost:3000
